force-app/main/default/objects/vlocity_ps__OrderRelationship__c/fields/vlocity_ps__OrderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OrderId__c</fullName>
    <description>The order that is related to another order</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Relationships</relationshipLabel>
    <relationshipName>InitiatedOrderRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>