force-app/main/default/objects/vlocity_ps__OrderRelationship__c/fields/vlocity_ps__RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RelationshipType__c</fullName>
    <description>The type of relationship between the Order record that is referenced through the &apos;Order&apos; field and the related Order record that is referenced through the &apos;Related Order&apos; field.</description>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>